test/libsolidity/syntaxTests/nameAndTypeResolution/061_missing_base_constructor_arguments.sol
contract A { constructor(uint a) { } }
contract B is A { }
// ----
// TypeError 3415: (39-58): No arguments passed to the base constructor. Specify the arguments or mark "B" as abstract.
